<resources>
    <string name="app_name">WanAndroid</string>
    <string name="index">首页</string>
    <string name="eye">探索</string>
    <string name="knowledge">知识体系</string>
    <string name="mine">我</string>
    <string name="from">from:  %1s</string>
    <string name="belong">belong to:  %1s</string>
    <string name="collect">我的收藏</string>
    <string name="about">关于作者</string>
    <string name="quit">退出登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_user">用户名</string>
    <string name="login_password">密码</string>
    <string name="register_user">输入用户名</string>
    <string name="register_password">输入密码</string>
    <string name="register_again_password">再次输入密码</string>
    <string name="user_name_null">用户名不能为空</string>
    <string name="user_name_length">用户名长度不能少于6位</string>
    <string name="user_password_null">密码不能为空</string>
    <string name="password_not_equal">两次密码不相同</string>
    <string name="register_success">注册成功</string>
    <string name="not_login">请先登录</string>
</resources>
