<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_110"
        android:background="@color/color_ea986c"
        app:layout_scrollFlags="scroll">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_31"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mine_avatar"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48" />

            <TextView
                android:id="@+id/mine_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_15"
                android:ellipsize="end"
                android:maxEms="8"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_15" />

            <RelativeLayout
                android:id="@+id/mine_collect_contrainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:background="@android:color/white"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/collect"
                    android:textColor="@color/color_333333" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_15"
                    android:src="@drawable/arrow_right" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_15"
                android:background="?android:attr/windowBackground" />

            <RelativeLayout
                android:id="@+id/mine_about_contrainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:background="@android:color/white"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/about"
                    android:textColor="@color/color_333333" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_15"
                    android:src="@drawable/arrow_right" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_15"
                android:background="?android:attr/windowBackground" />

            <RelativeLayout
                android:id="@+id/mine_quit_contrainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/quit"
                    android:textColor="@color/color_333333" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
